crates/wdl-grammar/tests/parsing/enums-missing-name/source.errors
error: expected enum name, but found `{`
  ┌─ tests/parsing/enums-missing-name/source.wdl:6:6
  │
6 │ enum {
  │      ^ unexpected `{`

