crates/wdl-grammar/tests/parsing/enums-missing-name/source.wdl
## Test enum with missing name

version 1.3

# Missing enum name - should error
enum {
    First,
    Second
}

workflow test {
    output {
        String result = "done"
    }
}
